--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,4 +8,5 @@ rust-version = "1.91"
 [dependencies]
 anyhow = "1.0.68"                                # error handling
 bytes = "1.3.0"                                  # helps manage buffers
-thiserror = "1.0.38"                             # error handling
+thiserror = "1.0.38"
+regex = "1.12.2"                             # error handling
